[package]
name = "veil-macros"
version = "0.1.1"
edition = "2021"
description = "Veil procedural macros"
license = "MIT OR Apache-2.0"
repository = "https://github.com/primait/veil"
readme = "../README.md"
documentation = "https://docs.rs/veil"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
