[package]
name = "veil-tests"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
veil = { path = "../" }

[dev-dependencies]
trybuild = "1"
regex = "1"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.10"
rand_pcg = "0.9"
arbitrary = { version = "1.4.1", features = ["derive"] }
